--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,26 @@
 
   <name>cd-demo</name>
   <url>http://maven.apache.org</url>
-
+  <scm>
+  	<connection>scm:git:https://github.com/musema/cd-demo.git</connection>
+    <tag>mrp-demo-0.1.0</tag>
+  </scm>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
-
+  <distributionManagement>
+  	<repository>
+  		<id>demo-repo-release</id>
+  		<url>file:/home/musema/repo/release</url>
+  	</repository>
+  	<snapshotRepository>
+  		<id>demo-repo-snapshot</id>
+  		<url>file:/home/musema/repo/snapshot</url>
+  	</snapshotRepository>
+  </distributionManagement>
+  
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -22,4 +37,22 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <build>
+   <plugins>
+     <plugin>
+       <groupId>org.apache.maven.plugins</groupId>
+       <artifactId>maven-compiler-plugin</artifactId>
+       <version>3.7.0</version>
+        <configuration>
+        <source>1.8</source>
+        <target>1.8</target>
+        </configuration>
+     </plugin>
+     <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.5.3</version>
+     </plugin>
+    </plugins>
+    </build>
 </project>
