--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,14 @@
 
   <groupId>com.openlane.demo</groupId>
   <artifactId>cd-demo</artifactId>
-  <version>0.1.0</version>
+  <version>0.1.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>cd-demo</name>
   <url>http://maven.apache.org</url>
   <scm>
   	<connection>scm:git:https://github.com/musema/cd-demo.git</connection>
-    <tag>0.1.0</tag>
+    <tag>mrp-demo-0.1.0</tag>
   </scm>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
